azure/worker/tests/broken_functions/syntax_error/main.py
def main(req):
    1 /  # noqa
